# $Id$

2007-02-09	Konstantin V. Arkhipov

	* main/Flow/SaveCommand.class.php: fetches object before form's
	export.

	* main/Flow/TakeCommand.class.php: abstract now.

2007-02-09	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveImage.class.php: fix return value.

2007-02-06	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveIdentifierList.class.php: list of
	identificable objects primitive was added.

2007-02-05	Konstantin V. Arkhipov

	* main/DAOs/Workers/: all workers are now calls dao's uncacheLists(),
	so you can now override it.

	* meta/builders/, main/DAOs/, main/Containers/: all helpers are
	ordinary methods now, all static stuff reverted (see 2006-12-24 for
	details).

2007-02-02	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: min/max values
	added to identifier's too.

2007-02-01	Konstantin V. Arkhipov

	* core/OSQL/SelectQuery.class.php: ported to OrderChain.

	* main/DAOs/ProtoDAO.class.php: proto-related stuff moved here from
	StorableDAO.

	* core/OSQL/OrderChain.class.php: introduced.

	* main/Criteria/Criteria.class.php: ability to add custom sort for
	fetching collections implemented.

2007-01-31	Dmitry E. Demidov

	* main/Utils/ClassUtils.class.php: added class for copy 
	object properties.

2007-01-31	Konstantin V. Arkhipov

	* core/OSQL/DataType.class.php, meta/types/:
	Unsigned{Small,,Big}Integer implemented.

	* meta/types/: min/max values for SmallInteger/Integer primitives.

2007-01-29	Dmitry E. Demidov

	* main/Utils/RussianTextUtils.class.php: added method getDateAsText.

2007-01-28	Konstantin V. Arkhipov

	* global.inc.php.tpl: new overridable constant introduced -
	ONPHP_IPC_PERMS.

2007-01-27	Konstantin V. Arkhipov

	* main/Flow/: ImportCommand implemented.

	* main/Containers/Unified/UnifiedContainer.class.php: object's
	comparsion bug introduced by identity map in php-5.2 fixed (was:
	'Nesting level too deep - recursive dependency?').

	* meta/builders/AutoClassBuilder.class.php: now builds custom