@@ -2,6 +2,9 @@
 
 2007-02-09	Konstantin V. Arkhipov
 
+	* main/Utils/ClassUtils.class.php: return value are omitted now for
+	all methods.
+
 	* main/Flow/SaveCommand.class.php: fetches object before form's
 	export.
 
